# h3a

h2bqt/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CMakeLists.txt  build.ninja  car.cpp  car.h  cmake_install.cmake  main.cpp
h2bqt/.cmake/api/v1/reply/: cache-v2-249cffeaf1bdd5c905df.json  cmakeFiles-v1-664a2cc58202cd743acf.json  codemodel-v2-96548db9ea519996cc0c.json  directory-.-Debug-d462346f3d1a399544ab.json  index-2025-11-09T16-19-35-0899.json  target-h2bqt-Debug-ba40ee0a8e0c1ed6e41d.json
h2bqt/.cmake/api/v1/reply.prev/: cmakeFiles-v1-2c7c9c989c482fd8048c.json  codemodel-v2-e8b061e3503c8e350ada.json  directory-.-Debug-996ac77cf6cbc25f7304.json  index-2025-11-09T15-34-32-0111.json  target-h2bqt-Debug-505ae118e4d38d7cf742.json
h2bqt/.qtc_clangd/: compile_commands.json
h2bqt/.qtc_clangd/.cache/clangd/index/: car.cpp.460ACF44DE3B8646.idx  car.h.0033D03FD7349184.idx  main.cpp.D009FABCE741ED8D.idx
